--- a/aboutUs.html
+++ b/aboutUs.html
@@ -62,6 +62,11 @@
                     <a class="sign">Sign In</a>
                     <div class="more-options">
                         <img src="./Assets/svg/more_vert.svg" alt="more options" />
+                        <ul class="dropdown-menu">
+                            <li><a href="./challenge.html">Challenge</a></li>
+                            <li><a href="./blog.html">Blog</a></li>
+                            <li><a href="#">Option 3</a></li>
+                        </ul>
                     </div>
                 </div>
                 <div class="menu">
@@ -210,6 +215,9 @@
                                 <li><a href="#">Post 3</a></li>
                             </ul>
                         </div>
+                    </div>
+                    <div class="footer-bottom">
+                        <p class="copyrigth">&copy; 2023 Karan Shah. All rights reserved.</p>
                     </div>
                 </footer>
             </div>
