--- a/blog.html
+++ b/blog.html
@@ -14,10 +14,10 @@
         <div class="left-container">
             <div class="top-left-container">
                 <!-- <div class="menu">
-                    <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
-                </div> -->
+          <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
+        </div> -->
                 <div class="home ">
-                    <a href="./index.html">
+                    <a href="./">
                         <img class="icon" src="./Assets/svg/home.svg" alt="home" />
                     </a>
                     <!-- <p>Home</p> -->
@@ -40,7 +40,6 @@
             <nav class="top-nav">
                 <div class="logo">
                     <img src="./Assets/svg/Asset 1.svg" alt="logo" />
-                    <!-- LOGO -->
                 </div>
                 <!-- <div class="search-bar"> -->
                 <label class="search-label">
@@ -70,7 +69,7 @@
                         </ul>
                     </div>
                 </div>
-                 <div class="menu">
+                <div class="menu">
                     <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
                 </div>
             </nav>
@@ -78,90 +77,88 @@
 
             <div class="video-container">
                 <video src="./Assets/videos/video.mp4" autoplay loop></video>
+                <!-- <img src="./Assets/images/DSC_0229.jpg" alt=""> -->
                 <div class="text-on-videos">
-                    <h1>Home Page</h1>
-                    <p>"Discover limitless possibilities on our dynamic home page."</p>
+                    <h1>Blog</h1>
+                    <!-- <p>Video Description</p> -->
                 </div>
 
             </div>
 
             <div class="container">
-                <div class="type-container">
-                    <div class="type-options">
-                        <ul>
-                            <li>
-                                <a href="#">Image</a>
-                            </li>
-                            <li>
-                                <a href="#">Video</a>
-                            </li>
-                            <li>
-                                <a href="#">Illustrate </a>
-                            </li>
-                            <li>
-                                <a href="#">Vector</a>
-                            </li>
-                        </ul>
+                <div class="blog-section">
+                    <div class="blog-title-subtitle">
+                        <h1>Popular Stories</h1>
+                        <p>This week's most-read stories</p>
                     </div>
-                    <div class="filter">
-                        <button class="filter-button">
-                            Filter
-                        </button>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/182d737d37d3b50026392be25859dc67.jpg" alt="dream" />
-                            <p>Karan Shah</p>
+                    <div class="blog-post">
+                        <div class="blog-image">
+                            <img src="./Assets/images/20190619_180532.jpg" alt="Blog Image 1">
                         </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20171112_215053.jpg" alt="dream" />
-                            <p>Karan Shah</p>
-
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20171216_231059.jpg" alt="dream" />
+                        <div class="blog-content">
+                            <h2>Blog Post Title 1</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, amet culpa unde modi libero
+                                totam, sit blanditiis quaerat neque a voluptatem expedita suscipit omnis repudiandae
+                                consequuntur vel in ducimus commodi.</p>
+                            <a href="#">Read More</a>
                         </div>
                     </div>
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/20180919_175351.jpg" alt="dream" />
-                            <p>Karan Shah</p>
-
+                    <div class="blog-post">
+                        <div class="blog-content">
+                            <h2>Blog Post Title 2</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas recusandae possimus
+                                aspernatur eligendi dolor. Nesciunt fuga distinctio tempore amet, id autem rerum?
+                                Explicabo, sint! Nemo libero rerum accusantium deleniti exercitationem.</p>
+                            <a href="#">Read More</a>
                         </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20190619_180532.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191013_182012.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20200201_131832.jpg" alt="dream" />
-                        </div>
-                     
-                    </div>
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/DSC_0027.JPG" alt="dream" />
-                            <p>Karan Shah</p>
-
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191031_121052.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191031_121211.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/DSC_0245.JPG" alt="dream" />
+                        <div class="blog-image">
+                            <img src="./Assets/images/20191013_182012.jpg" alt="Blog Image 2">
                         </div>
                     </div>
                 </div>
 
-                <div class="load-more-container">
-                    <button class="load-more-button">Load More</button>
+                <div class="new-story">
+                    <div class="blog-title-subtitle">
+                        <h1>Popular Stories</h1>
+                        <p>This week's most-read stories</p>
+                    </div>
+                    <div class="popular-story">
+                        <div class="story">
+                            <div class="ps-image">
+                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
+                            </div>
+                            <div class="ps-title">
+                                <h3 class="story-title">Story 1 Title</h3>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="ps-image">
+                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
+                            </div>
+                            <div class="ps-title">
+                                <h3 class="story-title">Story 1 Title</h3>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="ps-image">
+                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
+                            </div>
+                            <div class="ps-title">
+                                <h3 class="story-title">Story 1 Title</h3>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="ps-image">
+                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
+                            </div>
+                            <div class="ps-title">
+                                <h3 class="story-title">Story 1 Title</h3>
+                            </div>
+                        </div>
+    
+                        <!-- Add more story elements as needed -->
+                    </div>
+
                 </div>
 
                 <footer>
@@ -206,9 +203,7 @@
                         <p class="copyrigth">&copy; 2023 Karan Shah. All rights reserved.</p>
                     </div>
                 </footer>
-
             </div>
-
         </div>
     </div>
 </body>
