--- a/challenge.html
+++ b/challenge.html
@@ -14,10 +14,10 @@
         <div class="left-container">
             <div class="top-left-container">
                 <!-- <div class="menu">
-                    <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
-                </div> -->
+          <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
+        </div> -->
                 <div class="home ">
-                    <a href="./index.html">
+                    <a href="./">
                         <img class="icon" src="./Assets/svg/home.svg" alt="home" />
                     </a>
                     <!-- <p>Home</p> -->
@@ -40,7 +40,6 @@
             <nav class="top-nav">
                 <div class="logo">
                     <img src="./Assets/svg/Asset 1.svg" alt="logo" />
-                    <!-- LOGO -->
                 </div>
                 <!-- <div class="search-bar"> -->
                 <label class="search-label">
@@ -70,99 +69,80 @@
                         </ul>
                     </div>
                 </div>
-                 <div class="menu">
+                <div class="menu">
                     <img class="icon" src="./Assets/svg/menu.svg" alt="menu" />
                 </div>
             </nav>
             <!-- play video in loop -->
 
-            <div class="video-container">
+            <!-- <div class="video-container">
                 <video src="./Assets/videos/video.mp4" autoplay loop></video>
                 <div class="text-on-videos">
-                    <h1>Home Page</h1>
-                    <p>"Discover limitless possibilities on our dynamic home page."</p>
+                    <h1>Explore</h1>
                 </div>
 
-            </div>
+            </div> -->
 
             <div class="container">
-                <div class="type-container">
-                    <div class="type-options">
-                        <ul>
-                            <li>
-                                <a href="#">Image</a>
-                            </li>
-                            <li>
-                                <a href="#">Video</a>
-                            </li>
-                            <li>
-                                <a href="#">Illustrate </a>
-                            </li>
-                            <li>
-                                <a href="#">Vector</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="filter">
-                        <button class="filter-button">
-                            Filter
-                        </button>
-                    </div>
-                </div>
 
-                <div class="box">
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/182d737d37d3b50026392be25859dc67.jpg" alt="dream" />
-                            <p>Karan Shah</p>
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20171112_215053.jpg" alt="dream" />
-                            <p>Karan Shah</p>
+                <!-- challenge page code -->
 
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20171216_231059.jpg" alt="dream" />
-                        </div>
-                    </div>
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/20180919_175351.jpg" alt="dream" />
-                            <p>Karan Shah</p>
+                <h1>Challenge page</h1>
 
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20190619_180532.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191013_182012.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20200201_131832.jpg" alt="dream" />
-                        </div>
-                     
-                    </div>
-                    <div class="dream">
-                        <div class="image-div">
-                            <img src="./Assets/images/DSC_0027.JPG" alt="dream" />
-                            <p>Karan Shah</p>
+                <section class="challenge-section">
+                    <div class="container-1">
+                        <h1>Current Challenges</h1>
+                        <div class="challenges">
+                            <div class="challenge-card">
+                                <div class="image-container">
+                                    <img src="./Assets/images/20171112_215053.jpg" alt="Challenge 1">
+                                </div>
+                                <div class="challenge-details">
+                                    <h2>Challenge Title</h2>
+                                    <p>Challenge Description</p>
+                                    <a href="#" class="btn">Join the challenge</a>
+                                </div>
+                            </div>
+                            <div class="challenge-card">
+                                <div class="image-container">
+                                    <img src="./Assets/images/20191031_155234.jpg" alt="Challenge 1">
+                                </div>
+                                <div class="challenge-details">
+                                    <h2>Challenge Title</h2>
+                                    <p>Challenge Description</p>
+                                    <a href="#" class="btn">Join the challenge</a>
+                                </div>
+                            </div>
+                            <div class="challenge-card">
+                                <div class="image-container">
+                                    <img src="./Assets/images/20181211_102845.jpg" alt="Challenge 1">
+                                </div>
+                                <div class="challenge-details">
+                                    <h2>Challenge Title</h2>
+                                    <p>Challenge Description</p>
+                                    <a href="#" class="btn">Join the challenge</a>
+                                </div>
+                            </div>
 
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191031_121052.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/20191031_121211.jpg" alt="dream" />
-                        </div>
-                        <div class="image-div">
-                            <img src="./Assets/images/DSC_0245.JPG" alt="dream" />
+                            <!-- Add more challenge cards as needed -->
                         </div>
                     </div>
-                </div>
+                    <div class="container-1">
+                        <h1>sponser Challenges</h1>
+                        <div class="sponser-challenge">
 
-                <div class="load-more-container">
-                    <button class="load-more-button">Load More</button>
-                </div>
+                            <div class="sponser-text">
+                                <h2>Challenge Title</h2>
+                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur pariatur et possimus rem aut, inventore saepe blanditiis voluptates, quod esse. Animi eius cupiditate dignissimos quisquam, velit labore libero accusamus.</p>
+                            </div>
+                            <div class="sponser-button">
+                                <a href="#" class="btn">Sponser</a>
+                            </div>
+
+                            <!-- Add more challenge cards as needed -->
+                        </div>
+                    </div>
+                </section>
 
                 <footer>
                     <div class="left">
@@ -206,9 +186,7 @@
                         <p class="copyrigth">&copy; 2023 Karan Shah. All rights reserved.</p>
                     </div>
                 </footer>
-
             </div>
-
         </div>
     </div>
 </body>
