--- a/explore.html
+++ b/explore.html
@@ -62,6 +62,11 @@
           <a class="sign">Sign In</a>
           <div class="more-options">
             <img src="./Assets/svg/more_vert.svg" alt="more options" />
+            <ul class="dropdown-menu">
+              <li><a href="./challenge.html">Challenge</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="#">Option 3</a></li>
+            </ul>
           </div>
         </div>
         <div class="menu">
@@ -114,7 +119,7 @@
             <img src="./Assets/images/IMG_20201116_092959_817.jpg" alt="">
             <h4 class="top-title"> Jungle </h4>
           </div>
-         
+
           <!-- <div class="top-box">
             <h4 class="top-title">Centered Title</h4>
           </div> -->
@@ -203,7 +208,7 @@
                 <li><a href="#">Advertise</a></li>
                 <li><a href="#">Terms of Service</a></li>
                 <li><a href="#">Careers</a></li>
-            </ul>
+              </ul>
             </div>
             <div class="section">
               <h3>Company</h3>
@@ -221,6 +226,9 @@
                 <li><a href="#">Post 3</a></li>
               </ul>
             </div>
+          </div>
+          <div class="footer-bottom">
+            <p class="copyrigth">&copy; 2023 Karan Shah. All rights reserved.</p>
           </div>
         </footer>
       </div>
