--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </label>
                 <!-- </div> -->
                 <div class="nav-list">
-                    <a class="license">License</a>
+                    <a class="license" href="./licence.html">License</a>
                     <a class="join">Join</a>
                     <a class="sign">Sign In</a>
                     <div class="more-options">
@@ -66,7 +66,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="./challenge.html">Challenge</a></li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Option 3</a></li>
+                            <li><a href="./upload.html">Upload</a></li>
                         </ul>
                     </div>
                 </div>
