--- a/licence.html
+++ b/licence.html
@@ -65,7 +65,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="./challenge.html">Challenge</a></li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./upload.html">Upload</a></li>
+                            <li><a href="#">Option 3</a></li>
                         </ul>
                     </div>
                 </div>
@@ -75,91 +75,33 @@
             </nav>
             <!-- play video in loop -->
 
-            <div class="video-container">
-                <video src="./Assets/videos/video.mp4" autoplay loop></video>
-                <!-- <img src="./Assets/images/DSC_0229.jpg" alt=""> -->
-                <div class="text-on-videos">
-                    <h1>Blog</h1>
-                    <!-- <p>Video Description</p> -->
-                </div>
 
-            </div>
 
-            <div class="container">
-                <div class="blog-section">
-                    <div class="blog-title-subtitle">
-                        <h1>Popular Stories</h1>
-                        <p>This week's most-read stories</p>
-                    </div>
-                    <div class="blog-post">
-                        <div class="blog-image">
-                            <img src="./Assets/images/20190619_180532.jpg" alt="Blog Image 1">
-                        </div>
-                        <div class="blog-content">
-                            <h2>Blog Post Title 1</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, amet culpa unde modi libero
-                                totam, sit blanditiis quaerat neque a voluptatem expedita suscipit omnis repudiandae
-                                consequuntur vel in ducimus commodi.</p>
-                            <a href="#">Read More</a>
-                        </div>
-                    </div>
-                    <div class="blog-post">
-                        <div class="blog-content">
-                            <h2>Blog Post Title 2</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas recusandae possimus
-                                aspernatur eligendi dolor. Nesciunt fuga distinctio tempore amet, id autem rerum?
-                                Explicabo, sint! Nemo libero rerum accusantium deleniti exercitationem.</p>
-                            <a href="#">Read More</a>
-                        </div>
-                        <div class="blog-image">
-                            <img src="./Assets/images/20191013_182012.jpg" alt="Blog Image 2">
-                        </div>
-                    </div>
-                </div>
+            <div class="container" style="height: 100vh; padding: 0px; ">
 
-                <div class="new-story">
-                    <div class="blog-title-subtitle">
-                        <h1>Popular Stories</h1>
-                        <p>This week's most-read stories</p>
+                <div class="licence-container">
+                    <div class="text-subtext">
+                        <h2>Legal Simplicity</h2>
+                        <p>All photos and videos on Pexels can be downloaded and used for free.</p>
                     </div>
-                    <div class="popular-story">
-                        <div class="story">
-                            <div class="ps-image">
-                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
-                            </div>
-                            <div class="ps-title">
-                                <h3 class="story-title">Story 1 Title</h3>
-                            </div>
-                        </div>
-                        <div class="story">
-                            <div class="ps-image">
-                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
-                            </div>
-                            <div class="ps-title">
-                                <h3 class="story-title">Story 1 Title</h3>
-                            </div>
-                        </div>
-                        <div class="story">
-                            <div class="ps-image">
-                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
-                            </div>
-                            <div class="ps-title">
-                                <h3 class="story-title">Story 1 Title</h3>
-                            </div>
-                        </div>
-                        <div class="story">
-                            <div class="ps-image">
-                                <img src="./Assets/images/20191027_163830-01.jpeg" alt="Story 1" class="story-image">
-                            </div>
-                            <div class="ps-title">
-                                <h3 class="story-title">Story 1 Title</h3>
-                            </div>
-                        </div>
-    
-                        <!-- Add more story elements as needed -->
+                    <div class="allowed-container">
+                        <h3>What is allowed? 👌</h3>
+                        <h5>All photos and videos on Pexels are free to use.</h5>
+                        <h5>Attribution is not required. Giving credit to the photographer or Pexels is not necessary
+                            but always appreciated.</h5>
+                        <h5>You can modify the photos and videos from Pexels. Be creative and edit them as you like.
+                        </h5>
+                    </div>
+                    <div class="notallowed-container">
+                        <h3>What is not allowed? 👎</h3>
+                        <h5>Identifiable people may not appear in a bad light or in a way that is offensive.</h5>
+                        <h5>Don't sell unaltered copies of a photo or video, e.g. as a poster, print or on a physical product without modifying it first.</h5>
+                        <h5>Don't imply endorsement of your product by people or brands on the imagery.</h5>
+                        <h5>Don't redistribute or sell the photos and videos on other stock photo or wallpaper platforms.</h5>
                     </div>
 
                 </div>
+
 
                 <footer>
                     <div class="left">
