--- a/licence.html
+++ b/licence.html
@@ -65,7 +65,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="./challenge.html">Challenge</a></li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Option 3</a></li>
+                            <li><a href="./upload.html">Upload</a></li>
                         </ul>
                     </div>
                 </div>
