--- a/challenge.html
+++ b/challenge.html
@@ -63,6 +63,7 @@
                     <div class="more-options">
                         <img src="./Assets/svg/more_vert.svg" alt="more options" />
                         <ul class="dropdown-menu">
+                            <li><a href="./aboutUs.html">About Us</a></li>
                             <li><a href="./challenge.html">Challenge</a></li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="./upload.html">Upload</a></li>
@@ -83,66 +84,69 @@
 
             </div> -->
 
-            <div class="container">
+            <div class="container" style="height: 100vh; padding: 0px; ">
 
                 <!-- challenge page code -->
+                <div class="challenge-container">
+                    <h1>Challenge page</h1>
 
-                <h1>Challenge page</h1>
+                    <section class="challenge-section">
+                        <div class="container-1">
+                            <h1>Current Challenges</h1>
+                            <div class="challenges">
+                                <div class="challenge-card">
+                                    <div class="image-container">
+                                        <img src="./Assets/images/20171112_215053.jpg" alt="Challenge 1">
+                                    </div>
+                                    <div class="challenge-details">
+                                        <h2>Challenge Title</h2>
+                                        <p>Challenge Description</p>
+                                        <a href="#" class="btn">Join the challenge</a>
+                                    </div>
+                                </div>
+                                <div class="challenge-card">
+                                    <div class="image-container">
+                                        <img src="./Assets/images/20191031_155234.jpg" alt="Challenge 1">
+                                    </div>
+                                    <div class="challenge-details">
+                                        <h2>Challenge Title</h2>
+                                        <p>Challenge Description</p>
+                                        <a href="#" class="btn">Join the challenge</a>
+                                    </div>
+                                </div>
+                                <div class="challenge-card">
+                                    <div class="image-container">
+                                        <img src="./Assets/images/20181211_102845.jpg" alt="Challenge 1">
+                                    </div>
+                                    <div class="challenge-details">
+                                        <h2>Challenge Title</h2>
+                                        <p>Challenge Description</p>
+                                        <a href="#" class="btn">Join the challenge</a>
+                                    </div>
+                                </div>
 
-                <section class="challenge-section">
-                    <div class="container-1">
-                        <h1>Current Challenges</h1>
-                        <div class="challenges">
-                            <div class="challenge-card">
-                                <div class="image-container">
-                                    <img src="./Assets/images/20171112_215053.jpg" alt="Challenge 1">
-                                </div>
-                                <div class="challenge-details">
-                                    <h2>Challenge Title</h2>
-                                    <p>Challenge Description</p>
-                                    <a href="#" class="btn">Join the challenge</a>
-                                </div>
+                                <!-- Add more challenge cards as needed -->
                             </div>
-                            <div class="challenge-card">
-                                <div class="image-container">
-                                    <img src="./Assets/images/20191031_155234.jpg" alt="Challenge 1">
-                                </div>
-                                <div class="challenge-details">
-                                    <h2>Challenge Title</h2>
-                                    <p>Challenge Description</p>
-                                    <a href="#" class="btn">Join the challenge</a>
-                                </div>
-                            </div>
-                            <div class="challenge-card">
-                                <div class="image-container">
-                                    <img src="./Assets/images/20181211_102845.jpg" alt="Challenge 1">
-                                </div>
-                                <div class="challenge-details">
-                                    <h2>Challenge Title</h2>
-                                    <p>Challenge Description</p>
-                                    <a href="#" class="btn">Join the challenge</a>
-                                </div>
-                            </div>
-
-                            <!-- Add more challenge cards as needed -->
                         </div>
-                    </div>
-                    <div class="container-1">
-                        <h1>sponser Challenges</h1>
-                        <div class="sponser-challenge">
+                        <div class="container-1">
+                            <h1>sponser Challenges</h1>
+                            <div class="sponser-challenge">
 
-                            <div class="sponser-text">
-                                <h2>Challenge Title</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur pariatur et possimus rem aut, inventore saepe blanditiis voluptates, quod esse. Animi eius cupiditate dignissimos quisquam, velit labore libero accusamus.</p>
-                            </div>
-                            <div class="sponser-button">
-                                <a href="#" class="btn">Sponser</a>
-                            </div>
+                                <div class="sponser-text">
+                                    <h2>Challenge Title</h2>
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt aspernatur
+                                        pariatur et possimus rem aut, inventore saepe blanditiis voluptates, quod esse.
+                                        Animi eius cupiditate dignissimos quisquam, velit labore libero accusamus.</p>
+                                </div>
+                                <div class="sponser-button">
+                                    <a href="#" class="btn">Sponser</a>
+                                </div>
 
-                            <!-- Add more challenge cards as needed -->
+                                <!-- Add more challenge cards as needed -->
+                            </div>
                         </div>
-                    </div>
-                </section>
+                    </section>
+                </div>
 
                 <footer>
                     <div class="left">
