--- a/explore.html
+++ b/explore.html
@@ -63,6 +63,7 @@
           <div class="more-options">
             <img src="./Assets/svg/more_vert.svg" alt="more options" />
             <ul class="dropdown-menu">
+              <li><a href="./aboutUs.html">About Us</a></li>
               <li><a href="./challenge.html">Challenge</a></li>
               <li><a href="./blog.html">Blog</a></li>
               <li><a href="./upload.html">Upload</a></li>
