--- a/aboutUs.html
+++ b/aboutUs.html
@@ -150,8 +150,9 @@
 
                         </tbody>
                     </table>
-
-
+                    <a class="pexel-link" href="https://www.pexels.com/" target="_blank" >https://www.pexels.com/</a>
+                    <section>
+                    </section>
                     <section>
                         <h2 class="about-title">Contact Us</h2>
                         <p>If you have any questions or inquiries, feel free to reach out to us:</p>
