--- a/upload.html
+++ b/upload.html
@@ -66,7 +66,7 @@
                             <li><a href="./aboutUs.html">About Us</a></li>
                             <li><a href="./challenge.html">Challenge</a></li>
                             <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="#">Option 3</a></li>
+                            <li><a href="./upload.html">Upload</a></li>
                         </ul>
                     </div>
                 </div>
